--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -102,27 +102,59 @@ Here is an example of an example block.
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Deep Q network}
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=105mm]{deep_q_network.pdf}
+  \end{figure}
+\end{frame}
+
 \begin{frame}{DQN variations}
   \begin{itemize}
   \item {
-      NIPS (late 2013) - original paper from workshop
+      NIPS (late 2013) - original paper from workshop, 24 hour training time
   }
   \item {
-      Nature (early 2015) - Similar to NIPS, more conservative hyperparameters, model snapshotting
+      Nature (early 2015) - similar to NIPS, more conservative hyperparameters (7 day training), model freezing
   }
   \item {
-      Double DQN (September 2015) - Attempts to address value overestimates
+      Double DQN (September 2015) - branch from Nature model, attempts to address value overestimates
   }
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Double DQN formulation}
+  \begin{itemize}
+    \item Action-value function has weights $\boldsymbol{\theta}_t$
+    \item Target action-value function has weights $\boldsymbol{\theta}_t^-$
+    \item After every 10,000 training updates, $\boldsymbol{\theta}_t^- \leftarrow \boldsymbol{\theta}_t$
+  \end{itemize}
+
   \[Y_t^{\textrm{DQN}} \equiv R_{t+1} + \gamma \textcolor{red}{\max_{a} Q(S_{t+1},a;\boldsymbol{\theta}_t^-)} \]
   \[ \Downarrow \]
-  \[Y_t^{\textrm{DoubleDQN}} \equiv R_{t+1} + \gamma \textcolor{red}{Q(S_{t+1},\argmax_a Q(S_{t+1},a;\boldsymbol{\theta}_t),\boldsymbol{\theta}_t^-)} \]
+  \[\boxed{Y_t^{\textrm{DoubleDQN}} \equiv R_{t+1} + \gamma \textcolor{red}{Q(S_{t+1},\argmax_a Q(S_{t+1},a;\boldsymbol{\theta}_t),\boldsymbol{\theta}_t^-)}} \]
   \begin{itemize}
     \item If $\boldsymbol{\theta}_t^- = \boldsymbol{\theta}_t$ (NIPS model), no difference
   \end{itemize}
+\end{frame}
+
+\begin{frame}{Implementation}
+  \begin{itemize}
+    \item Nathan Sprague, \href{https://github.com/spragunr/deep_q_rl}{https://github.com/spragunr/deep\_q\_rl}
+    \item Circular buffer for 1M replay frames, visualization code, model saving and loading
+    \item Already supported NIPS and Nature algorithms.
+    \item After some Theano debugging, my fork now supports Double DQN
+    \item EC2 g2.2xlarge
+    \item Single threaded, CPU bound, 30\% GPU utilization, 8GB replay buffer
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Double DQN Results}
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=90mm]{dqn_rewardper.pdf}
+  \end{figure}
+  Each epoch takes about an hour. Stopped after $\sim 20$ hours.
 \end{frame}
 
 
