Update with single DQN comparison.

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -157,6 +157,13 @@ Here is an example of an example block.
   Each epoch takes about an hour. Stopped after $\sim 20$ hours.
 \end{frame}
 
+\begin{frame}{Double DQN Results}
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=90mm]{dqn_meanq.pdf}
+  \end{figure}
+\end{frame}
+
 
 % Placing a * after \section means it will not show in the
 % outline or table of contents.
