--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -49,7 +49,7 @@
     \item Video game developed by Atari, Inc.
   \end{itemize}
   \begin{center}
-  \includegraphics{tmp.jpg}
+  \includegraphics[width=50mm]{tmp.jpg}
   \end{center}
 \end{frame}
 
@@ -197,23 +197,13 @@ Here is an example of an example block.
 \begin{frame}{Summary}
   \begin{itemize}
   \item
-    The \alert{first main message} of your talk in one or two lines.
+    With the right kind of feature extraction, problem simplifies.
   \item
-    The \alert{second main message} of your talk in one or two lines.
+    A pixel-based learning algorithm is slow to train but generalizable.
   \item
-    Perhaps a \alert{third message}, but not more than that.
+    DQNs struggle with certian types of problems.
   \end{itemize}
   
-  \begin{itemize}
-  \item
-    Outlook
-    \begin{itemize}
-    \item
-      Something you haven't solved.
-    \item
-      Something else you haven't solved.
-    \end{itemize}
-  \end{itemize}
 \end{frame}
 
 
