--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -179,7 +179,9 @@ Here is an example of an example block.
     \centering
     \includegraphics[width=90mm]{dqn_rewardper.pdf}
   \end{figure}
-  Each epoch takes about an hour. Stopped after $\sim 20$ hours.
+  Each epoch takes about an hour. Stopped after $\sim 20$ hours.\\
+  \vspace{12pt}
+  \url{https://youtu.be/UXurvvDY93o?t=5m21s}
 \end{frame}
 
 \begin{frame}{Double DQN Results}
