Decreased the number of sections

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -40,7 +40,7 @@
 % Section and subsections will appear in the presentation overview
 % and table of contents.
 
-\section{Breakout}
+\section{Breakout and Feature Extraction}
 \begin{frame}{Breakout}
   \begin{itemize}
     \item Classic video game.  Developed by Atari.
@@ -49,8 +49,6 @@
   \includegraphics[width=50mm]{tmp.jpg}
   \end{center}
 \end{frame}
-
-\section{Arcade Learning Environment}
 
 \begin{frame}{Arcade Learning Environment}
   \begin{itemize}
@@ -73,7 +71,6 @@
   \end{itemize}
 \end{frame}
 
-\section{Feature extraction}
 \begin{frame}{Feature Extraction}
   \begin{itemize}
     \item{Image Processing to extract:}
