--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -194,8 +194,9 @@
 \begin{frame}{Deep Q network}
   \begin{figure}[H]
     \centering
-    \includegraphics[width=105mm]{deep_q_network.pdf}
+    \includegraphics[width=93mm]{deep_q_network.pdf}
   \end{figure}
+  (Mnih et. al. 2015)
   \[ \boldsymbol{\theta}_{t+1} = \boldsymbol{\theta}_t+\alpha(Y_t^Q-Q(S_t,A_t;\boldsymbol{\theta}_t))\nabla_{\boldsymbol{\theta}_t}Q(S_t,A_t;\boldsymbol{\theta}_t) \]
 \end{frame}
 
