--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -138,25 +138,53 @@
   \begin{itemize}
     \item[] Initialize $Q(s, a)$ arbitrarily
     \item[] For each episode:
-    \item[] \hspace{2em} $e(s, a) = 0$ for all $s, a$
+    \item[] \hspace{2em} $e(s, a) \leftarrow 0$
     \item[] \hspace{2em} For each step:
     \item[] \hspace{4em} Discover current state $s$ with IP, choose action $a$
-    \item[] \hspace{4em} Choose $a'$ for $s$ from $Q(s, a)$ ($\epsilon$-greedy)
+    \item[] \hspace{4em} Choose $a'$ from $Q(s, a)$ ($\epsilon$-greedy)
     \item[] \hspace{4em} Take action $a'$, observe $r$ and $s'$
-    \item[] \hspace{4em} $\delta = r + \gamma Q(s', a') - Q(s, a)$
-    \item[] \hspace{4em} $e(s, a) = e(s, a) + 1$
+    \item[] \hspace{4em} $\delta \leftarrow r + \gamma Q(s', a') - Q(s, a)$
+    \item[] \hspace{4em} $e(s, a) \leftarrow e(s, a) + 1$
     \item[] \hspace{4em} For all $s, a$:
-    \item[] \hspace{6em} $Q(s, a) = Q(s, a) + \alpha \delta e(s, a)$
-    \item[] \hspace{6em} $e(s) = \gamma \lambda e(s)$
-    \item[] \hspace{4em} $s = s'$
+    \item[] \hspace{6em} $Q(s, a) \leftarrow Q(s, a) + \alpha \delta e(s, a)$
+    \item[] \hspace{6em} $e(s) \leftarrow \gamma \lambda e(s)$
+    \item[] \hspace{4em} $s \leftarrow s'$
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Training}
+  \begin{itemize}
+    \item $\alpha$ = 0.1
+    \item $\gamma$ = 0.7
+    \item $\epsilon$ = 0.1
+    \item $\lambda$ = 0.7
+  \end{itemize}
+  \vspace{2em}
+  \begin{itemize}
+    \item Train for 100 episodes, then run an episode to evaluate.
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Results}
   \begin{itemize}
-    \item We don't have any yet!
-    \item We will soon *fingers crossed*
-    \item There will be cool graphs
+    \item Converges reasonably well after tens of episodes.
+  \end{itemize}
+  \vspace{2em}
+  \begin{itemize}
+    \item Training: \url{https://youtu.be/3iPaoACCi-I}
+    \item Converged: \url{https://youtu.be/agMy9ZnSYD0}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Future Work}
+  \begin{itemize}
+    \item Each episode takes a \textbf{long} time
+    \item Optimize hyperparameters
+  \end{itemize}
+  \vspace{2em}
+  \begin{itemize}
+    \item What if the RL agent knows about the state of the bricks?
+    \item Will this make a significant difference?
   \end{itemize}
 \end{frame}
 
