Added training graph

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -165,6 +165,13 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Training}
+  \centering
+  \includegraphics[scale=0.45]{breakout-learn.pdf}
+\end{frame}
+
+
+
 \begin{frame}{Results}
   \begin{itemize}
     \item Converges reasonably well after tens of episodes.
