--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -170,8 +170,6 @@
   \includegraphics[scale=0.45]{breakout-learn.pdf}
 \end{frame}
 
-
-
 \begin{frame}{Results}
   \begin{itemize}
     \item Converges reasonably well after tens of episodes.
@@ -181,6 +179,15 @@
     \item Training: \url{https://youtu.be/3iPaoACCi-I}
     \item Converged: \url{https://youtu.be/agMy9ZnSYD0}
   \end{itemize}
+\end{frame}
+
+\begin{frame}{Results}
+  \begin{itemize}
+    \item Policy produced is what you'd expect
+  \end{itemize}
+  \vspace{2em}
+  \centering
+    [left, left, left, right, right, right]
 \end{frame}
 
 \begin{frame}{Future Work}
