Add figures from presentation.

--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -102,6 +102,12 @@ Cory's section goes here.
 \subsection{Double DQN formulation}
 \subsection{Implementation}
 \subsection{Results}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=120mm]{dqn_rewardper.pdf}
+  \caption{Example figure.}
+\end{figure}
+Each epoch takes about an hour. Stopped after $\sim 20$ hours.\\
 
 \section{Design challenges}
 Put design challenges here.
