--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -47,7 +47,7 @@
 \setlength\parindent{0pt}
 
 \newcommand{\hmwkTitle}{Utilizing reinforcement learning techniques to play Atari's Breakout}
-\newcommand{\hmwkDueDate}{November 3, 2015}
+\newcommand{\hmwkDueDate}{07 December 2015}
 \newcommand{\hmwkClass}{Reinforcement Learning}
 \newcommand{\hmwkClassInstructor}{Dr. Itamar Arel}
 \newcommand{\hmwkAuthorName}{Andrew Messing, Ben Brock, and Cory Walker}
@@ -83,7 +83,7 @@
 \pagebreak
 
 \begin{abstract}
-  Abstract goes here. Ben, could you take care of this?
+We demonstrate the performance of two different reinforcement learning methods, basic Q-learning using manual image processing and deep Q-learning using raw pixel input, on Atari's Breakout.  While deep reinforcement learning techniques may be generalizable across games and ultimately result in optimal performance, they require a large amount of computational resources and time for training.  By performing manual image processing to derive states, we show that similar performance can be achieved in less time using basic Q-learning.
 \end{abstract}
 
 \section{Introduction}
