Fixed some typos

--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -87,11 +87,11 @@
 \end{abstract}
 
 \section{Introduction}
-Deep Reinforment Learning is a relatively new approach to learn to control agents via high dimensional sensory inputs like vision in speech. This project compares success of a specific feature based reinforcement learning approach to a deep reinforcement learning one using the atari game breakout and the Arcade Learning Environment.
+Deep Reinforment Learning is a relatively new approach to learn to control agents via high dimensional sensory inputs like vision and speech. This project compares the success of a specific feature based reinforcement learning approach to a deep reinforcement learning one using the atari game Breakout and the Arcade Learning Environment.
 
 \section{Breakout and feature extraction}
 \subsection{Breakout}
-Breakout is a classic arcade game developed by Atari, Inc. Similar to pong the object is to use a paddle to bounce a ball; however for breakout the paddle move horizontally and is positioned at the bottom of the screen. At the top of the screen are multiple layers of bricks. Everytime the ball collides with a brick it breaks it and the player gains points. The goal of the game is to break all the bricks, score points, and not let the ball fall below the paddle as that costs the user a life. When all the lives are gone the game is over.
+Breakout is a classic arcade game developed by Atari, Inc. Similar to pong the objective is to use a paddle to bounce a ball; however for breakout the paddle moves horizontally and is positioned at the bottom of the screen. At the top of the screen are multiple layers of bricks. Everytime the ball collides with a brick it breaks it and the player gains points. The goal of the game is to break all the bricks, score points, and not let the ball fall below the paddle as that costs the user a life. When all the lives are gone the game is over.
 
   \begin{center}
   \includegraphics[width=50mm]{tmp.jpg}
