--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -95,9 +95,12 @@ Deep Reinforment Learning is a relatively new approach to learn to control agent
 \subsection{Breakout}
 Breakout is a classic arcade game developed by Atari, Inc. Similar to pong the objective is to use a paddle to bounce a ball; however for breakout the paddle moves horizontally and is positioned at the bottom of the screen. At the top of the screen are multiple layers of bricks. Everytime the ball collides with a brick it breaks it and the player gains points. The goal of the game is to break all the bricks, score points, and not let the ball fall below the paddle as that costs the user a life. When all the lives are gone the game is over.
 
-  \begin{center}
+\begin{figure}
+  \centering
+  \caption{The Breakout setup.}
   \includegraphics[width=50mm]{tmp.jpg}
-  \end{center}
+  \label{breakout:simple}
+\end{figure}
 
 \subsection{Arcade Learning Environment}
 The Arcade Learning Environment (ALE) is a simple object-oriented framework designed to allow researchers to test Artificial Intelligence agents to play Atari 2600 games \cite{ale}. The agent can receive the game frames and ram and is given access to the number of lives, the score, and other information from the game. Then the agent can use this to come with an action that it would send back to the ALE. The controller that is simulated contains a joystick, an action button, and a couple of menu buttons that total to about 20 possible actions including the buttons being pressed and the joystick being moved in one of eight directions.
@@ -105,24 +108,54 @@ The Arcade Learning Environment (ALE) is a simple object-oriented framework desi
 For breakout specifically there are three actions that contribute to the game: move the joystick left, move the joystick right, and do nothing.
 
 \subsection{Feature Extraction}
-To extract features for the non-Deep reinforcement learning agent image processing was used to capture the paddle and the ball's position. While the paddle maintained one of two colors making it relatively easy to extract, the ball changes colors as it goes by the brick layers to the color of that brick layer and when it is in open space to the color of the paddle. 
+To extract features for the basic reinforcement learning agent, we used image processing to capture the position of the paddle and ball.  See Figure \ref{breakout:fe} for a visualization of the results of the feature extraction.  While the paddle maintained one of two colors making it relatively easy to extract, the ball changes colors as it goes by each of the brick layers, taking on the color of each brick layer.  When the ball is in open space, it returns to the color of the paddle. 
 
 \begin{figure}
+  \centering
   \caption{Feature extraction performed on a frame from Breakout.  The white dots indicate the detected x and y coordinates of the paddle and ball.}
   \begin{center}
   \includegraphics[width=50mm]{tmp2.jpg}
   \end{center}
+  \includegraphics[scale=.75]{tmp2.jpg}
+  \label{breakout:fe}
 \end{figure}
 
 \section{Reinforcement learning}
 \subsection{Introduction}
 The Breakout problem is the problem of playing the game of Breakout while maximizing the score received.  Our RL agent controls the paddle and, at each timestep of the ALE engine, has three possible actions: to move the paddle to the left, to hold the paddle still, or to move the paddle to the left.  The optimal action will depend depend on the position of the paddle, the position of the ball, and possibly the position of the blocks overhead.  Here, we will present a simple Q-learning approach to solving the Breakout problem.  First, we will discuss the formulation of the problem as a Markov Decision Process (MDP), then the design and implementation of our Q-learning approach to training an RL agent to solve Breakout.  Then, we will discuss the training results and performance of our agent.
 \subsection{Formulation as an MDP}
-In our formulation of Breakout, the RL agent has three possible states, which are each derived from the relative x-coordinate position of the ball and paddle.  Either the ball is to the left of the paddle (state 1), the ball is directly on top of the paddle (state 2), or the ball is to the right of the paddle (state 3).  In our formulation, our RL agent is given a state value and the opportunity to perform an action at each timestep of the ALE.  The RL agent may perform one of three actions: the RL agent may choose to move the paddle to the left, to the right, or to hold the paddle still.  When the ball drops below the paddle (losing a game life), the RL agent will receive a reward of -10.  At all other timesteps, the RL agent will receive a reward of 0.
+In our formulation of Breakout, the RL agent has three possible states, which are each derived from the relative x-coordinate position of the ball and paddle.  Either the ball is to the left of the paddle (state 1), the ball is directly on top of the paddle (state 2), or the ball is to the right of the paddle (state 3).  In our formulation, our RL agent is given a state value and the opportunity to perform an action at each timestep of the ALE.  The RL agent may perform one of three actions: the RL agent may choose to move the paddle to the left, to the right, or to hold the paddle still.  When the ball drops below the paddle (losing a game life), the RL agent will receive a reward of -10.  At all other timesteps, the RL agent will receive a reward of 0.  An episode begins when a game of Breakout starts and ends when the game has ended (the agent loses all of its lives).
 \\\\
 We have chosen this formulation because of its simplicity.  While a truly optimal Breakout player may use the position of the bricks to inform its decisions about how to hit the ball, it is our hypothesis that a player which simply attempts to hit the ball may be very nearly optimal.  We wish to demonstrate that a very simple formulation may achieve high performance if it is well-tuned to the attributes of the system.
 \subsection{Q-Learning Method}
-We use Q-learning with elligibility traces to train our RL agent to solve Breakout \cite{sutton}.
+We use Q-learning with elligibility traces to train our RL agent to solve Breakout \cite{sutton}.  For data structures, we keep a vector $Q(s, a)$ of state-action values.  For each episode, we also maintain a vector $e(s, a)$ of elligibility traces for each state-action pair.  When we initialize our RL agent, we initialize our $Q$ vector with random values between 0 and 1.  At the start of each episode, we initialize an elligibility trace $e(s, a)$ with all zeros.  Then, for each step, we discover the current state $s$ using our custom image processing.  The agent remembers a previous action $a$ from the last timestep.  Then, the agent picks a new action $a'$ from $Q(s, a)$ using an $\epsilon$-greedy policy.  From this action, the agent observes a reward $r$.  The agent estimates a change in state value, $\delta$, using the reward $r$ and the difference in state values.  It then increases the elligibility of the current state $s$.  Then, for every state, the agent will update the value of the state in accordance with its elligibility and the difference in state value $\delta$ the agent just experienced.  See Figure \ref{qlearn:code} for a concise technical description of the RL method used.
+
+\begin{figure}
+    \centering
+    \caption{Q-learning method used to train our RL agent.}
+    \begin{itemize}
+    \item[] Initialize $Q(s, a)$ arbitrarily
+    \item[] For each episode:
+    \item[] \hspace{2em} $e(s, a) \leftarrow 0$
+    \item[] \hspace{2em} For each step:
+    \item[] \hspace{4em} Discover current state $s$ with IP, choose action $a$
+    \item[] \hspace{4em} Choose $a'$ from $Q(s, a)$ ($\epsilon$-greedy)
+    \item[] \hspace{4em} Take action $a'$, observe $r$ and $s'$
+    \item[] \hspace{4em} $\delta \leftarrow r + \gamma Q(s', a') - Q(s, a)$
+    \item[] \hspace{4em} $e(s, a) \leftarrow e(s, a) + 1$
+    \item[] \hspace{4em} For all $s, a$:
+    \item[] \hspace{6em} $Q(s, a) \leftarrow Q(s, a) + \alpha \delta e(s, a)$
+    \item[] \hspace{6em} $e(s) \leftarrow \gamma \lambda e(s)$
+    \item[] \hspace{4em} $s \leftarrow s'$
+  \end{itemize}
+  \label{qlearn:code}
+\end{figure}
+
+\subsection{Results}
+\subsubsection{Hyperparameters}
+We trained our RL agent using the hyperparameters $\alpha = 0.01$, $\gamma = 0.9$, $\lambda = 0.9$, and $\epsilon = 0.01$.  We started off with hyperparameters of $\alpha = 0.1$, $\gamma = 0.7$, $\lambda = 0.9$, and $\epsilon = 0.1$ and randomly modified them until we arrived at the new hyperparameters, which train and converge much more readily than the original ones.  A major problem with the original hyperparameters was that the agent would converge very quickly to what we could observe is a good policy, then diverge from it, randomly cycling through subpar policies.  Lowering the step size $\alpha$ resulted in more stable training.  We hypothesize that the larger step size is in an issue because of the very large number of times the RL agent visits each state.  We also increased $\gamma$ and $\lambda$, which together control the decay of the elligibility trace.  Because the agent may perform a sub-optimal action and then visit many other states before a negative reward is received (the agent looses a life), it is important that states remain elligible so that a bad state-action pair can be recognized.  In addition, we hypothesize that lowering the value of $\epsilon$ allows bad state-action pairs to be isolated and recognized.
+\subsubsection{Training and Performance}
+We found that our RL agent, trained with the above hyperparameters, converged to a near-optimal policy after about 50 episodes, which corresponds to about 25 minutes of gameplay.
 
 \section{Deep reinforcement learning}
   While manual feature extraction can result in faster training and potentially better performance, there is a large motivation to be able to learn from general and high dimensional inputs such as video and sound. If we could learn to play Atari games from raw pixels, we could use the same algorithm on an array of games, even games we have never actually played before. \\
