Fixed link color

--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -19,6 +19,10 @@
 % Basic Document Settings
 %
 
+\definecolor{navyblue}{rgb}{0.0, 0.0, 0.5}
+\definecolor{oxfordblue}{rgb}{0.0, 0.15, 0.40}
+\hypersetup{colorlinks, breaklinks, urlcolor=oxfordblue, linkcolor=oxfordblue, citecolor=oxfordblue}
+
 \topmargin=-0.45in
 \evensidemargin=0in
 \oddsidemargin=0in
